# spaCEinvaders

Cliente/: CMakeLists.txt  Cliente.c  Cliente.h
Cliente2/: CMakeLists.txt  Cliente2.c  Cliente2.h
Espectador/: CMakeLists.txt  Espectador.c  Espectador.h
Servidor/src/: Alien.java  Bunker.java  Game.java  Ovni.java  Server.java  SpaceInvadersClientHandler.java  SpaceInvadersServer.java
